Notification close button not centered fixed

--- a/frontend/src/components/Notification.css
+++ b/frontend/src/components/Notification.css
@@ -17,6 +17,8 @@
 }
 
 .notification-close-button {
+  align-self: center;
+  margin-top: -20px;
   grid-column-start: -2;
   grid-column-end: span -1;
 }
